--- a/history-service-git/PKGBUILD
+++ b/history-service-git/PKGBUILD
@@ -1,18 +1,18 @@
 # Maintainer: Ivan Semkin (ivan at semkin dot ru)
 
 pkgname=history-service-git
-_pkgname=history-service
-pkgver=r1496.a99df26
+_pkgname=lomiri-history-service
+pkgver=r1557.0.6_3_g411a293
 pkgrel=1
 pkgdesc='History service to store messages and calls'
-url='https://github.com/ubports/history-service'
+url='https://gitlab.com/ubports/development/core/lomiri-history-service'
 arch=(x86_64 i686 armv7h aarch64)
 license=(GPL)
 conflicts=(history-service)
 provides=(history-service)
-depends=(lcov gcovr libphonenumber telepathy-qt sqlite telepathy-mission-control qt-gstreamer qt5-pim-git)
+depends=(lcov gcovr libphonenumber telepathy-qt-git sqlite telepathy-mission-control qt5-pim-git)
 makedepends=(git cmake)
-source=('git+https://gitlab.com/ubports/development/core/history-service.git#branch=main'
+source=('git+https://gitlab.com/ubports/development/core/lomiri-history-service.git#branch=main'
         '0001-Disable-Werror.patch')
 sha256sums=('SKIP'
             '9eb242daf66f04a49ec38134988b13d5e783cb0e096bd153159df744353540fd')
@@ -21,15 +21,17 @@ sha256sums=('SKIP'
 BUILDENV+=('!check') # https://paste.ubuntu.com/p/hR9tBFXJ6Y/
 
 prepare() {
-    cd ${_pkgname}
-    for i in "${srcdir}/"*.patch; do
-        patch -Np1 -i "$i"
-    done
+    echo "SKIP"
+    # cd ${_pkgname}
+    # for i in "${srcdir}/"*.patch; do
+    #     patch -Np1 -i "$i"
+    # done
 }
 
 pkgver() {
   cd ${_pkgname}
-  echo "r$(git rev-list --count HEAD).$(git describe --always)"
+  ver="r$(git rev-list --count HEAD).$(git describe --always)"
+  echo "${ver//-/_}"            # only: hyphens → underscores
 }
 
 build() {
