build telepathy-qt

--- a/telepathy-qt-git/PKGBUILD
+++ b/telepathy-qt-git/PKGBUILD
@@ -8,7 +8,7 @@ _pkgbase=telepathy-qt5
 pkgname=$_pkgname-git
 pkgver=0.9.8.r15.g188dece4
 pkgrel=1
-arch=(i686 x86_64)
+arch=(i686 x86_64 aarch64)
 url="http://telepathy.freedesktop.org/wiki/"
 license=(LGPL)
 provides=($_pkgbase $_pkgname)
