--- a/properties-cpp/PKGBUILD
+++ b/properties-cpp/PKGBUILD
@@ -1,34 +1,34 @@
-# Maintainer: Iwan Timmer <irtimmer@gmail.com>
+# Maintainer: Stephan Springer <buzo+arch@Lini.de>
+# Contributor: Iwan Timmer <irtimmer@gmail.com>
 
 pkgname=properties-cpp
 pkgdesc="A very simple convenience library for handling properties and signals in C++11"
-pkgver=0.0.1
-_pkgver=0.0.1+14.10.20140730
-pkgrel=3
-arch=('any')
+pkgver=0.0.3
+_pkgver="$pkgver"-1
+pkgrel=1
+arch=(any)
 url="https://launchpad.net/properties-cpp"
-license=('LGPL3')
-makedepends=('cmake')
-source=("https://launchpad.net/ubuntu/+archive/primary/+files/properties-cpp_$_pkgver.orig.tar.gz")
-md5sums=('449f95cc864ebe38a35848885ca1cb4b')
+license=(LGPL3)
+makedepends=(cmake doxygen graphviz)
+source=("https://launchpad.net/ubuntu/+archive/primary/+sourcefiles/${pkgname}/${_pkgver}/${pkgname}_${pkgver}.orig.tar.gz")
+sha256sums=('62730a43c15dfb8dd28beca8852d7b11f64a6db72f47953bee78b31b9d9b3069')
 
 prepare() {
-  cd "$srcdir/${pkgname}-${_pkgver}"
-
-  # Don't build tests
-  truncate -s 0 tests/CMakeLists.txt
+  # don't build tests, would need more dependencies
+  echo > "$pkgname-$pkgver"/tests/CMakeLists.txt
+  # disable coverage report
+  sed -i '/^find_package(CoverageReport)/,$d' "$pkgname-$pkgver"/CMakeLists.txt
 }
 
 build() {
-  mkdir -p "$srcdir/${pkgname}-${_pkgver}/build"
-  cd "$srcdir/${pkgname}-${_pkgver}/build"
-
-  cmake .. -DCMAKE_INSTALL_LIBDIR=/usr/lib -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_BUILD_TYPE=Release
-  make
+  cmake -B build -S "$pkgname-$pkgver" \
+    -DCMAKE_INSTALL_LIBDIR=/usr/lib \
+    -DCMAKE_INSTALL_PREFIX=/usr \
+    -DCMAKE_BUILD_TYPE=Release \
+    -DCMAKE_POLICY_VERSION_MINIMUM=3.5
+  cmake --build build
 }
 
 package() {
-  cd "$srcdir/${pkgname}-${_pkgver}/build"
-
-  make DESTDIR="$pkgdir/" install
-} 
+  DESTDIR="$pkgdir" cmake --install build
+}
