--- a/click-git/PKGBUILD
+++ b/click-git/PKGBUILD
@@ -2,29 +2,30 @@
 
 pkgname=click-git
 _pkgname=click
-pkgver=r1082.cc10894
+pkgver=r1198.0.5.2_22_gc2c79f2
 pkgrel=1
 pkgdesc='Click is a simplified packaging format'
-url='https://github.com/ubports/click'
+url='https://gitlab.com/ubports/development/core/click'
 arch=(x86_64 i686 armv7h aarch64)
 license=()
 conflicts=(click)
 provides=(click)
 depends=(libgee json-glib)
-makedepends=(git cmake intltool vala gobject-introspection)
-source=('git+https://github.com/ubports/click.git')
+makedepends=(git cmake intltool vala gobject-introspection properties-cpp)
+source=('git+https://gitlab.com/ubports/development/core/click.git#branch=main')
 sha256sums=('SKIP')
 
 BUILDENV+=('!check') # Tests broken due to absense of dpkg
 
 pkgver() {
   cd ${_pkgname}
-  echo "r$(git rev-list --count HEAD).$(git describe --always)"
+  ver="r$(git rev-list --count HEAD).$(git describe --always)"
+  echo "${ver//-/_}"            # only: hyphens → underscores
 }
 
 prepare() {
   cd ${_pkgname}
-  git checkout bionic
+  # stay on main branch
 }
 
 build() {
@@ -34,10 +35,11 @@ build() {
   make
 }
 
-check() {
-  cd ${_pkgname}
-  make check
-}
+# Tests broken
+# check() {
+#   cd ${_pkgname}
+#   make check
+# }
 
 package() {
   cd ${_pkgname}
