--- a/qdjango-git/PKGBUILD
+++ b/qdjango-git/PKGBUILD
@@ -1,10 +1,11 @@
 # Maintainer: Ivan Semkin (ivan at semkin dot ru)
 # Contributor Spike29 <leguen.yannick@gmail.com>
+# Qdjango is deprecated
 
 pkgname=qdjango-git
 _pkgname=qdjango
-pkgver=v0.6.2+16+gbda4755
-pkgrel=2
+pkgver=v0.6.2+17+g2ced9b8
+pkgrel=1
 pkgdesc='A Qt-based C++ web framework'
 url='https://github.com/jlaine/qdjango/'
 arch=(x86_64 i686 armv7h aarch64)
@@ -23,13 +24,16 @@ pkgver() {
   git describe --tags | sed 's/-/+/g'
 }
 
+prepare() {
+  mkdir -p ${_pkgname}/doc/html
+}
+
 build() {
   cd ${_pkgname}
   mkdir -p build
   cd build
   qmake PREFIX=/usr ..
   make
-  mkdir -p ${_pkgname}/doc/html
 }
 
 package() {
