--- a/libusermetrics-git/PKGBUILD
+++ b/libusermetrics-git/PKGBUILD
@@ -2,29 +2,29 @@
 
 pkgname=libusermetrics-git
 _pkgname=libusermetrics
-pkgver=r479.ed7dd5d
+pkgver=683.d7cbc41
 pkgrel=1
 pkgdesc='Library for exporting anonymous metrics about users'
-url='https://github.com/ubports/libusermetrics'
+url='https://gitlab.com/ubports/development/core/libusermetrics'
 arch=(x86_64 i686 armv7h aarch64)
 license=(LGPL3 LGPL GPL)
 conflicts=(libusermetrics)
 provides=(libusermetrics)
 depends=(qt5-base qt5-xmlpatterns gsettings-qt apparmor click-git qdjango-git libqtdbustest-git)
 makedepends=(git cmake cmake-extras-git doxygen intltool)
-source=('git+https://github.com/ubports/libusermetrics.git')
+source=('git+https://gitlab.com/ubports/development/core/libusermetrics.git')
 sha256sums=('SKIP')
 
 BUILDENV+=('!check') # Some tests are broken
 
 pkgver() {
   cd ${_pkgname}
-  echo "r$(git rev-list --count HEAD).$(git describe --always)"
+  echo "$(git rev-list --count HEAD).$(git rev-parse --short HEAD)"
 }
 
 prepare() {
   cd ${_pkgname}
-  git checkout bionic
+  # git checkout bionic
 }
 
 build() {
@@ -33,10 +33,11 @@ build() {
   make
 }
 
-check() {
-  cd ${_pkgname}
-  make ARGS+="--output-on-failure" test
-}
+# Tests working, but takes too long
+# check() {
+#   cd ${_pkgname}
+#   make ARGS+="--output-on-failure" test
+# }
 
 package() {
   cd ${_pkgname}
