--- a/lomiri-ui-toolkit-git/PKGBUILD
+++ b/lomiri-ui-toolkit-git/PKGBUILD
@@ -2,16 +2,16 @@
 
 pkgname=lomiri-ui-toolkit-git
 _pkgname=lomiri-ui-toolkit
-pkgver=r18181.1.3.4000.r2.g2806cdf9b
-pkgrel=1
+pkgver=r18774.1.3.5110.r69.g9eb9f7d36
+pkgrel=0
 epoch=2
-pkgdesc='Qt Components for Ubuntu'
+pkgdesc='This project consists of a set of QML components to ease the creation of beautiful applications in QML for Lomiri.'
 url='https://gitlab.com/ubports/development/core/lomiri-ui-toolkit'
 arch=(x86_64 i686 armv7h aarch64)
 license=(LGPL)
 conflicts=(ubuntu-ui-toolkit)
 provides=(ubuntu-ui-toolkit)
-depends=(qt5-base qt5-quickcontrols lttng-ust libnih qt5-systems qt5-pim qt5-svg qt5-feedback lomiri-themes-git qt5-graphicaleffects bluez-libs)
+depends=(qt5-base qt5-quickcontrols lttng-ust libnih qt5-systems qt5-pim qt5-svg qt5-feedback suru-icon-theme-git qt5-graphicaleffects bluez-libs)
 makedepends=(git)
 checkdepends=()
 source=('git+https://gitlab.com/ubports/development/core/lomiri-ui-toolkit.git#branch=main'
@@ -37,7 +37,9 @@ pkgver() {
 
 build() {
   cd ${_pkgname}
-  qmake CONFIG+=no_docs
+  mkdir -p build
+  cd build
+  qmake CONFIG+=no_docs .. 
   make
 }
 
@@ -47,8 +49,7 @@ build() {
 #}
 
 package() {
-  cd ${_pkgname}
-  mkdir -p /tmp/runtime-builduser
-  XDG_RUNTIME_DIR=/tmp/runtime-builduser make INSTALL_ROOT="${pkgdir}/" install || XDG_RUNTIME_DIR=/tmp/runtime-builduser make INSTALL_ROOT="${pkgdir}/" install
+  cd ${_pkgname}/build
+  make INSTALL_ROOT="${pkgdir}/" install
 }
 # vim:set ts=2 sw=2 et:
