--- a/camera-app-git/PKGBUILD
+++ b/camera-app-git/PKGBUILD
@@ -8,7 +8,7 @@ pkgdesc="Camera application"
 arch=('x86_64' 'armv7' 'aarch64')
 url="https://gitlab.com/ubports/apps/camera-app"
 license=('GPL3')
-depends=(qt5-base qt5-multimedia qt5-quickcontrols2 exiv2 ubuntu-ui-toolkit-git
+depends=(qt5-base qt5-multimedia qt5-quickcontrols2 exiv2 lomiri-ui-toolkit-git
          libusermetrics-git unity-action-api-git gst-plugins-bad gst-plugins-bad-libs) 
 makedepends=('git' 'cmake' 'extra-cmake-modules' 'intltool')
 source=("git+$url.git"
