--- a/content-hub-git/PKGBUILD
+++ b/content-hub-git/PKGBUILD
@@ -11,7 +11,7 @@ arch=(x86_64 i686 armv7h aarch64)
 license=(LGPL3)
 conflicts=(content-hub)
 provides=(content-hub)
-depends=(lcov gcovr gmock ubuntu-app-launch-git ubuntu-download-manager-git gsettings-qt apparmor libnotify ubuntu-ui-toolkit-git)
+depends=(lcov gcovr gmock ubuntu-app-launch-git ubuntu-download-manager-git gsettings-qt apparmor libnotify lomiri-ui-toolkit-git)
 makedepends=(git cmake cmake-extras-git doxygen graphviz) 
 checkdepends=(xorg-server-xvfb)
 source=('git+https://github.com/ubports/content-hub.git#branch=xenial')
