--- a/buteo-syncfw-qml-git/PKGBUILD
+++ b/buteo-syncfw-qml-git/PKGBUILD
@@ -2,34 +2,27 @@
 
 pkgname=buteo-syncfw-qml-git
 _pkgname=buteo-syncfw-qml
-pkgver=r30.f850e99
-pkgrel=3
+pkgver=r40.3579995
+pkgrel=1
 pkgdesc='Buteo sync framework client - QML bindings'
-url='https://github.com/ubports/buteo-syncfw-qml'
+url='https://gitlab.com/ubports/development/core/buteo-syncfw-qml'
 arch=(x86_64 i686 armv7h aarch64)
 license=()
 depends=(qt5-base qt5-declarative)
 makedepends=(git cmake cmake-extras)
-source=('git+https://github.com/ubports/buteo-syncfw-qml.git'
-        '0001-Remove-unused-slot.patch')
-sha256sums=('SKIP'
-            'SKIP')
+source=('git+https://gitlab.com/ubports/development/core/buteo-syncfw-qml.git')
+sha256sums=('SKIP')
 
 pkgver() {
  cd ${_pkgname}
  printf "r%s.%s" "$(git rev-list --count HEAD)" "$(git rev-parse --short HEAD)"
 }
 
-prepare() {
-  cd ${_pkgname}
-  patch -p1 -i ../0001-Remove-unused-slot.patch
-}
-
 build() {
   cd ${_pkgname}
   mkdir -p build
   cd build
-  cmake ../ -DCMAKE_INSTALL_PREFIX:PATH=/usr -DCMAKE_INSTALL_LIBDIR="lib/" -DCMAKE_INSTALL_SYSCONFDIR=/etc -DCMAKE_INSTALL_LOCALSTATEDIR=/var
+  cmake ../ -DCMAKE_POLICY_VERSION_MINIMUM=3.5 -DCMAKE_INSTALL_PREFIX:PATH=/usr -DCMAKE_INSTALL_LIBDIR="lib/" -DCMAKE_INSTALL_SYSCONFDIR=/etc -DCMAKE_INSTALL_LOCALSTATEDIR=/var
   make
 
 }
