--- a/libayatana-common-git/PKGBUILD
+++ b/libayatana-common-git/PKGBUILD
@@ -9,7 +9,7 @@ arch=("i686" "x86_64" "aarch64")
 url="https://github.com/AyatanaIndicators/libayatana-common"
 license=("LGPL2.1" "LGPL3")
 makedepends=("git" "cmake" "cmake-extras" "gtest")
-depends=("gtk3" "glib2" "url-dispatcher-git")
+depends=("gtk3" "glib2" "lomiri-url-dispatcher-git")
 options=('!emptydirs')
 source=("git+https://github.com/AyatanaIndicators/${_pkgname}.git")
 md5sums=("SKIP")
