--- a/libertine-git/PKGBUILD
+++ b/libertine-git/PKGBUILD
@@ -11,7 +11,7 @@ license=(GPL3)
 conflicts=(libertine)
 provides=(libertine)
 depends=(python3 gtest qt5-base qt5-quickcontrols)
-makedepends=(git cmake cmake-extras-git dbus-test-runner intltool)
+makedepends=(git cmake cmake-extras dbus-test-runner intltool)
 source=('git+https://github.com/ubports/libertine.git')
 sha256sums=('SKIP')
 
