--- a/libqtdbusmock-git/PKGBUILD
+++ b/libqtdbusmock-git/PKGBUILD
@@ -11,7 +11,7 @@ license=(LGPL3)
 conflicts=(libqtdbusmock)
 provides=(libqtdbusmock)
 depends=(networkmanager libqtdbustest-git gmock)
-makedepends=(git cmake cmake-extras-git) 
+makedepends=(git cmake cmake-extras) 
 checkdepends=(python-dbusmock python-dbus python-gobject)
 source=('git+https://github.com/ubports/libqtdbusmock.git')
 sha256sums=('SKIP')
