--- a/libqtdbustest-git/PKGBUILD
+++ b/libqtdbustest-git/PKGBUILD
@@ -11,7 +11,7 @@ license=(LGPL3)
 conflicts=(libqtdbustest)
 provides=(libqtdbustest)
 depends=(gcovr lcov gmock qt5-base)
-makedepends=(git cmake cmake-extras-git)
+makedepends=(git cmake cmake-extras)
 checkdepends=(python-dbusmock python-dbus python-gobject)
 source=('git+https://gitlab.com/ubports/development/core/libqtdbustest.git')
 sha256sums=('SKIP')
