--- a/qtmir-git/PKGBUILD
+++ b/qtmir-git/PKGBUILD
@@ -11,7 +11,7 @@ license=(LGPL)
 conflicts=(qtmir)
 provides=(qtmir)
 depends=(qt5-base qt5-quickcontrols qt5-sensors mir process-cpp lomiri-app-launch-git gsettings-qt-git libqtdbustest-git libqtdbusmock-git lomiri-url-dispatcher-git glm valgrind)
-makedepends=(git cmake cmake-extras-git gtest)
+makedepends=(git cmake cmake-extras gtest)
 source=('git+https://gitlab.com/ubports/development/core/qtmir.git')
 sha256sums=('SKIP')
 
