--- a/lomiri-url-dispatcher-git/PKGBUILD
+++ b/lomiri-url-dispatcher-git/PKGBUILD
@@ -12,7 +12,7 @@ license=(LGPL)
 conflicts=(url-dispatcher)
 provides=(url-dispatcher)
 depends=(lomiri-app-launch-git intltool apparmor)
-makedepends=(git cmake cmake-extras-git dbus-test-runner lcov gcovr gmock)
+makedepends=(git cmake cmake-extras dbus-test-runner lcov gcovr gmock)
 checkdepends=(python-testtools python-nose python-dbusmock)
 source=('git+https://gitlab.com/ubports/development/core/lomiri-url-dispatcher#branch=main')
 sha256sums=('SKIP')
