--- a/address-book-service-git/PKGBUILD
+++ b/address-book-service-git/PKGBUILD
@@ -1,16 +1,16 @@
 # Maintainer: Furkan Kardame <furkan@fkardame.com>
 
 pkgname=address-book-service-git
-_pkgname=address-book-service
-pkgver=r947.f7e699c
-pkgrel=10
+_pkgname=lomiri-address-book-service
+pkgver=r1209.9c96731
+pkgrel=1
 pkgdesc='Ubuntu contact service'
-url='https://github.com/ubports/address-book-service'
+url='https://gitlab.com/ubports/development/core/lomiri-address-book-service'
 arch=(x86_64 i686 armv7h aarch64)
 license=()
-depends=(libaccounts-qt folks libgee url-dispatcher qt5-pim-git qt5-base ayatana-indicator-messages-git libphonenumber ubuntu-ui-toolkit-git buteo-syncfw-qml-git)
-makedepends=(git cmake vala)
-source=('git+https://github.com/ubports/address-book-service.git'
+depends=(libaccounts-qt folks libgee lomiri-url-dispatcher-git qt5-pim-git qt5-base lomiri-notifications-git libphonenumber lomiri-ui-toolkit-git buteo-syncfw-qml-git)
+makedepends=(git cmake vala ayatana-indicator-messages)
+source=('git+https://gitlab.com/ubports/development/core/lomiri-address-book-service.git'
         0001-Update-for-libebook-3.33.2.patch
         0001-Make-sure-target-link-is-public-and-add-missing-libr.patch)
 sha256sums=('SKIP'
@@ -25,8 +25,8 @@ pkgver() {
 prepare() {
   cd ${_pkgname}
   # patches here
-  patch -p1 -i ../0001-Update-for-libebook-3.33.2.patch
-  patch -p1 -i ../0001-Make-sure-target-link-is-public-and-add-missing-libr.patch
+  # patch -p1 -i ../0001-Update-for-libebook-3.33.2.patch
+  # patch -p1 -i ../0001-Make-sure-target-link-is-public-and-add-missing-libr.patch
 }
 
 build() {
