--- a/ayatana-indicator-messages/PKGBUILD
+++ b/ayatana-indicator-messages/PKGBUILD
@@ -4,12 +4,12 @@ pkgname="ayatana-indicator-messages"
 _pkgname="ayatana-indicator-messages"
 pkgver="24.5.1"
 pkgrel="0"
-pkgdesc="Ayatana Indicator for viewing recent notifications"
+pkgdesc="Ayatana Indicator Messages Applet"
 arch=("i686" "x86_64" "aarch64")
 url="https://github.com/AyatanaIndicators"
 license=("GPL3")
 depends=("glib2" "libayatana-indicator" "accountsservice")
-makedepends=("intltool" "libayatana-indicator" "accountsservice" "glib2" "gdk-pixbuf2" "gtk3" "mate-common")
+makedepends=("intltool" "libayatana-indicator" "accountsservice" "glib2" "gdk-pixbuf2" "gtk3" "mate-common" "vala")
 source=("https://github.com/AyatanaIndicators/${_pkgname}/archive/${pkgver}.tar.gz")
 md5sums=("65f4d12358e67254b2cd5518b99664cd")
 options=("!emptydirs")
