--- a/libqtdbusmock-git/PKGBUILD
+++ b/libqtdbusmock-git/PKGBUILD
@@ -2,10 +2,10 @@
 
 pkgname=libqtdbusmock-git
 _pkgname=libqtdbusmock
-pkgver=r126.1e9fd84
-pkgrel=1
+pkgver=r138.0.9.1
+pkgrel=0
 pkgdesc='Library for mocking DBus interactions using Qt'
-url='https://github.com/ubports/libqtdbusmock'
+url='https://gitlab.com/ubports/development/core/libqtdbusmock'
 arch=(x86_64 i686 armv7h aarch64)
 license=(LGPL3)
 conflicts=(libqtdbusmock)
@@ -13,7 +13,7 @@ provides=(libqtdbusmock)
 depends=(networkmanager libqtdbustest-git gmock)
 makedepends=(git cmake cmake-extras) 
 checkdepends=(python-dbusmock python-dbus python-gobject)
-source=('git+https://github.com/ubports/libqtdbusmock.git')
+source=('git+https://gitlab.com/ubports/development/core/libqtdbusmock.git')
 sha256sums=('SKIP')
 
 pkgver() {
