--- a/qmenumodel-git/PKGBUILD
+++ b/qmenumodel-git/PKGBUILD
@@ -2,8 +2,8 @@
 
 pkgname=qmenumodel-git
 _pkgname=qmenumodel
-pkgver=r571.0.9.1.r2.g24cc4ee
-pkgrel=1
+pkgver=r578.0.9.2.r2.gc8b25f7
+pkgrel=0
 pkgdesc='Qt binding for GMenuModel'
 url='https://github.com/AyatanaIndicators/qmenumodel'
 arch=(x86_64 i686 armv7h aarch64)
