--- a/geonames-git/PKGBUILD
+++ b/geonames-git/PKGBUILD
@@ -2,16 +2,16 @@
 
 pkgname=geonames-git
 _pkgname=geonames
-pkgver=r5.ce158ce
+pkgver=r114.0.3.1
 pkgrel=1
 pkgdesc='Parse and query the geonames database dump'
-url='https://github.com/ubports/geonames'
+url='https://gitlab.com/ubports/development/core/geonames'
 arch=(x86_64 i686 armv7h aarch64)
 license=(LGPL3)
 conflicts=(geonames)
 provides=(geonames)
 makedepends=(git gtk-doc)
-source=('git+https://bitbucket.org/vanyasem/geonames')
+source=('git+https://gitlab.com/ubports/development/core/geonames.git')
 sha256sums=('SKIP')
 
 BUILDENV+=('!check') # Weird locale issues
@@ -23,17 +23,17 @@ pkgver() {
 
 build() {
   cd ${_pkgname}
-  ./autogen.sh --prefix=/usr
-  make
+  cmake -DCMAKE_POLICY_VERSION_MINIMUM=3.5 -DCMAKE_INSTALL_PREFIX:PATH=/usr -DCMAKE_INSTALL_LIBDIR='lib/' .
+  make CMAKE_POLICY_VERSION_MINIMUM=3.5
 }
 
-check() {
-  cd ${_pkgname}
-  make check
-}
+# check() {
+#   cd ${_pkgname}
+#   make check
+# }
 
 package() {
   cd ${_pkgname}
-  make DESTDIR="${pkgdir}/" install
+  make CMAKE_POLICY_VERSION_MINIMUM=3.5 DESTDIR="${pkgdir}/" install
 }
 # vim:set ts=2 sw=2 et:
