--- a/libqofono-qt5/PKGBUILD
+++ b/libqofono-qt5/PKGBUILD
@@ -1,32 +1,33 @@
 # Maintainer: Ivan Semkin (ivan at semkin dot ru)
 
-pkgname=libqofono
-pkgver=0.94
-pkgrel=1
+pkgname=libqofono-qt5
+_pkgname=libqofono
+pkgver=0.124
+pkgrel=0
 pkgdesc='A library for accessing the ofono daemon, and a declarative plugin for it'
-url='https://git.merproject.org/mer-core/libqofono'
+url='https://github.com/sailfishos/libqofono'
 arch=(x86_64 i686 armv7h aarch64)
 license=(LGPL)
 depends=(qt5-base qt5-declarative qt5-xmlpatterns)
 makedepends=()
-source=('https://git.merproject.org/mer-core/libqofono/-/archive/0.94/libqofono-0.94.tar.gz')
-sha256sums=('f5220a583f559f31f2b8592068f59ad0620e46d1e6bafc0d5d46da6771ecd472')
+source=('https://github.com/sailfishos/libqofono/archive/refs/tags/0.124.tar.gz')
+sha256sums=('c21103f7176dd11417588b24ff728864eb20115df7dd2f290f5bdd09d13c50c2')
 
 BUILDENV+=('!check') # Tests can only be run AFTER the package is installed (maybe some prefix exists?)
 
 build() {
-  cd ${pkgname}-${pkgver}
+  cd ${_pkgname}-${pkgver}
   qmake
   make
 }
 
-check() {
-  cd ${pkgname}-${pkgver}
-  make check TESTARGS="-silent"
-}
+# check() {
+#   cd ${pkgname}-${pkgver}
+#   make check TESTARGS="-silent"
+# }
 
 package() {
-  cd ${pkgname}-${pkgver}
+  cd ${_pkgname}-${pkgver}
   make INSTALL_ROOT="${pkgdir}/" install
 }
 # vim:set ts=2 sw=2 et: 
