--- a/process-cpp/PKGBUILD
+++ b/process-cpp/PKGBUILD
@@ -3,7 +3,7 @@
 pkgname=process-cpp
 pkgdesc="C++11 library for handling processes"
 pkgver=3.0.1
-pkgrel=3
+pkgrel=4
 arch=('x86_64' 'aarch64')
 url="https://launchpad.net/process-cpp"
 license=('LGPL3')
@@ -23,7 +23,7 @@ build() {
   mkdir -p "$srcdir/${pkgname}-${pkgver}/build"
   cd "$srcdir/${pkgname}-${pkgver}/build"
 
-  cmake .. -DCMAKE_INSTALL_LIBDIR=/usr/lib -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_BUILD_TYPE=Release
+  cmake .. -DCMAKE_POLICY_VERSION_MINIMUM=3.5 -DCMAKE_INSTALL_LIBDIR=/usr/lib -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_BUILD_TYPE=Release
   make
 }
 
