--- a/dbus-cpp/PKGBUILD
+++ b/dbus-cpp/PKGBUILD
@@ -3,40 +3,35 @@
 
 pkgname=dbus-cpp
 pkgdesc='A header-only dbus-binding leveraging C++-11'
-pkgver=5.0.0
-_pkgver=5.0.0+18.04.20171031
-pkgrel=7
-url='https://code.launchpad.net/dbus-cpp'
+pkgver=5.0.4
+pkgrel=0
+url='https://gitlab.com/ubports/development/core/lib-cpp/dbus-cpp'
 arch=(x86_64 aarch64)
 license=(LGPL3)
 depends=(process-cpp dbus libxml2)
 makedepends=(cmake gmock properties-cpp boost lcov gcovr)
-source=("https://launchpad.net/ubuntu/+archive/primary/+files/dbus-cpp_${_pkgver}.orig.tar.gz"
-        'boost-asio-1-66.patch')
-sha256sums=('e0d426027acd65f7e568c53e974ae3e666f0af2e75b2d2afed3dae721a6e9e38'
-            '7e7b83516ddbcad675ed63dc950ecdd35cecf73efad63fac675931e4b3795269')
+source=("https://gitlab.com/ubports/development/core/lib-cpp/dbus-cpp/-/archive/5.0.4/dbus-cpp-5.0.4.tar.gz"
+        '0001-ironrobin.patch')
+sha256sums=('ec0b526fcfa82a0969b6092eddded52a1287209e7613d0e409107042207bcdc5'
+            'SKIP')
 
 prepare() {
-  cd "${srcdir}"
+  cd "${srcdir}/dbus-cpp-5.0.4"
 
-  # Don't build tests
-  truncate -s 0 tests/CMakeLists.txt
-
-  # Fix boost asio 1.66 API changes
-  # https://github.com/anbox/anbox/issues/637#issuecomment-373361974
-  patch -Np1 -i boost-asio-1-66.patch
+  patch -Np1 -i "$srcdir/0001-ironrobin.patch"
 }
 
 build() {
-  mkdir -p "${srcdir}/build"
-  cd "${srcdir}/build"
+  mkdir -p "${srcdir}/dbus-cpp-5.0.4/build"
+  cd "${srcdir}/dbus-cpp-5.0.4/build"
 
-  CXXFLAGS=-Wno-error=deprecated-copy cmake .. -DCMAKE_INSTALL_LIBDIR=/usr/lib -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_BUILD_TYPE=Release -DDBUS_CPP_VERSION_MAJOR=5 -DDBUS_CPP_VERSION_MINOR=0 -DDBUS_CPP_VERSION_PATCH=0
+  CXXFLAGS=-Wno-error=deprecated-copy 
+  cmake -DCMAKE_INSTALL_LIBDIR=/usr/lib -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_BUILD_TYPE=Release -DDBUS_CPP_VERSION_MAJOR=5 -DDBUS_CPP_VERSION_MINOR=0 -DDBUS_CPP_VERSION_PATCH=0 ..
   make
 }
 
 package() {
-  cd "${srcdir}/build"
+  cd "${srcdir}/dbus-cpp-5.0.4/build"
 
   make DESTDIR="${pkgdir}/" install
 }
