--- a/wlcs/PKGBUILD
+++ b/wlcs/PKGBUILD
@@ -1,30 +1,37 @@
-pkgname=wlcs
-pkgver=1.2.1
-_tardirname=1.2.1
-pkgrel=1
-pkgdesc="Canonical's protocol-conformance-verifying test suite for Wayland compositor implementations."
-url='https://github.com/MirServer/wlcs'
-arch=(x86_64 i686 aarch64)
-license=(GPL)
-depends=(gtest boost-libs wayland)
-makedepends=(git cmake boost gmock wayland-protocols)
-optdepends=()
-source=("https://github.com/MirServer/wlcs/releases/download/v${pkgver}/wlcs-${pkgver}.tar.xz")
-sha256sums=('882eb10aa4824fd05e839f2a8d79c3ae7e9e8e0bced5675e90d95f9ebca268d5')
+# Maintainer: Fabio 'Lolix' Loli <fabio.loli@disroot.org> -> https://github.com/FabioLolix
+# Contributor: thyTwilightGoth <https://aur.archlinux.org/account/thyTwilightGoth>
+# Contributor: Pedro <https://aur.archlinux.org/account/PedroHLC>
 
-BUILD_DIR=build
+pkgname=wlcs
+pkgver=1.7.0
+pkgrel=4
+pkgdesc="Canonical's protocol-conformance-verifying test suite for Wayland compositor implementations."
+arch=(x86_64 i686 armv7h aarch64)
+url="https://github.com/canonical/wlcs"
+license=(G'PL-2.0-or-later OR GPL-3.0-or-later')
+depends=(glibc gcc-libs gtest wayland) #boost-libs
+makedepends=(git cmake boost wayland-protocols)
+#source=("${pkgname}-${pkgver}.tar.gz::$url/archive/v${pkgver}.tar.gz")
+source=("https://github.com/canonical/wlcs/releases/download/v${pkgver}/wlcs-${pkgver}.tar.xz")
+sha512sums=('ac8d33eef2ba7ebaaff46967e23f353c7eb41035568f3c703a05fe8f291602487b4b5a7e71ff72d00c41eaa8283a8fc4e5d3533385a449794986f667ae292240')
 
 build() {
-  cd "${pkgname}-${_tardirname}"
-  mkdir -p "${BUILD_DIR}"
-  cd "${BUILD_DIR}"
-  cmake -DCMAKE_INSTALL_PREFIX:PATH=/usr -DCMAKE_INSTALL_LIBDIR="lib/" ..
-  cmake --build ./
+  export CFLAGS+=" -Wno-error=unused-result -Wno-error=maybe-uninitialized"
+  export CXXFLAGS+=" -Wno-error=unused-result -Wno-error=maybe-uninitialized"
+
+	local _flags=(
+    -DCMAKE_INSTALL_LIBDIR=lib/
+    -DCMAKE_INSTALL_LIBEXECDIR=bin/
+	)
+
+  cmake -B build -S "wlcs-${pkgver}" -Wno-dev \
+    -DCMAKE_BUILD_TYPE=None \
+    -DCMAKE_INSTALL_PREFIX=/usr \
+    "${_flags[@]}"
+
+  cmake --build build
 }
 
 package() {
-  cd "${pkgname}-${_tardirname}/${BUILD_DIR}"
-  make DESTDIR="${pkgdir}/" install
+  DESTDIR="${pkgdir}" cmake --install build
 }
-
-# vim:set ts=2 sw=2 et:
