add mir and remove optional packages

--- a/mir/PKGBUILD
+++ b/mir/PKGBUILD
@@ -10,7 +10,7 @@ url='https://mir-server.io'
 arch=(x86_64 i686 aarch64)
 license=(GPL LGPL)
 depends=(gtest boost-libs capnproto google-glog gflags libglvnd  liburcu lttng-ust libepoxy libxml++2.6 nettle libinput libxkbcommon python-pillow freetype2 libevdev protobuf python-dbus python-gobject hicolor-icon-theme libxcursor yaml-cpp)
-makedepends=(libdisplay-info git glm doxygen cmake boost gcovr gmock lcov valgrind python-dbusmock umockdev wlcs)
+makedepends=(libdisplay-info git glm doxygen cmake ninja boost gcovr gmock lcov valgrind python-dbusmock umockdev wlcs)
 optdepends=('qterminal: required for miral demos'
             'ttf-ubuntu-font-family: required for miral demos'
             'qt5-wayland: required for miral demos'
