--- a/lomiri-content-hub-git/PKGBUILD
+++ b/lomiri-content-hub-git/PKGBUILD
@@ -1,17 +1,17 @@
 # Maintainer: Ivan Semkin (ivan at semkin dot ru)
 
-pkgname=content-hub-git
-_pkgname=content-hub
-pkgver=r1183.9a56dc8
-pkgrel=0
+pkgname=lomiri-content-hub-git
+_pkgname=lomiri-content-hub
+pkgver=r1515.2.1.0_8_gb88c659
+pkgrel=1
 pkgdesc='Content sharing/picking infrastructure and service, designed to allow apps to securely and efficiently exchange content'
 url='https://gitlab.com/ubports/development/core/lomiri-content-hub'
 arch=(x86_64 i686 armv7h aarch64)
 license=(LGPL3)
 conflicts=(content-hub)
 provides=(content-hub)
-depends=(lcov gcovr gmock lomiri-app-launch-git ubuntu-download-manager-git gsettings-qt apparmor libnotify lomiri-ui-toolkit-git)
-makedepends=(git cmake cmake-extras doxygen graphviz) 
+depends=(lcov gcovr gmock lomiri-app-launch-git lomiri-download-manager-git gsettings-qt apparmor libnotify lomiri-ui-toolkit-git)
+makedepends=(qt5-tools git cmake cmake-extras doxygen graphviz) 
 checkdepends=(xorg-server-xvfb)
 source=('git+https://gitlab.com/ubports/development/core/lomiri-content-hub.git#branch=main')
 sha256sums=('SKIP')
@@ -20,7 +20,8 @@ BUILDENV+=('!check') # https://paste.ubuntu.com/p/XXm29c8rv8/
 
 pkgver() {
   cd ${_pkgname}
-  echo "r$(git rev-list --count HEAD).$(git describe --always)"
+  ver="r$(git rev-list --count HEAD).$(git describe --always)"
+  echo "${ver//-/_}"            # only: hyphens → underscores
 }
 
 prepare() {
@@ -36,10 +37,10 @@ build() {
   XDG_RUNTIME_DIR=/tmp/runtime-builduser make
 }
 
-check() {
-  cd ${_pkgname}
-  make ARGS+="--output-on-failure" test
-}
+# check() {
+#   cd ${_pkgname}
+#   make ARGS+="--output-on-failure" test
+# }
 
 package() {
   cd ${_pkgname}
