--- a/deviceinfo-git/PKGBUILD
+++ b/deviceinfo-git/PKGBUILD
@@ -11,7 +11,7 @@ license=()
 conflicts=(deviceinfo)
 provides=(deviceinfo)
 depends=()
-makedepends=(git)
+makedepends=(git yaml-cpp)
 source=('git+https://gitlab.com/ubports/development/core/deviceinfo.git#branch=main')
 sha256sums=('SKIP')
 
