--- a/trust-store-git/PKGBUILD
+++ b/trust-store-git/PKGBUILD
@@ -5,14 +5,14 @@ _pkgname=trust-store
 pkgver=r423.0292700
 pkgrel=5
 pkgdesc='C++11 library for persisting trust requests'
-url='https://github.com/ubports/trust-store'
+url='https://gitlab.com/ubports/development/core/trust-store'
 arch=(x86_64 i686 armv7h aarch64)
 license=(LGPL)
 conflicts=(trust-store)
 provides=(trust-store)
 depends=(qt5-base qt5-quickcontrols boost dbus-cpp gmock lcov gcovr mir apparmor properties-cpp)
 makedepends=(git cmake cmake-extras doxygen graphviz)
-source=('git+https://github.com/ubports/trust-store.git')
+source=('git+https://gitlab.com/ubports/development/core/trust-store.git')
 sha256sums=('SKIP')
 
 BUILDENV+=('!check') # https://paste.ubuntu.com/p/NZr7FtGtWw/
