--- a/unity8-git/PKGBUILD
+++ b/unity8-git/PKGBUILD
@@ -7,7 +7,7 @@ pkgname=(lomiri-git)
 _pkgname=lomiri
 pkgver=r18754.e7bc87f88
 pkgrel=1
-url='https://github.com/ubports/unity8'
+url='https://gitlab.com/ubports/development/core/lomiri'
 arch=(x86_64 i686 armv7h aarch64)
 license=(LGPL3)
 depends=(lcov gcovr geonames-git lomiri-api-git qmenumodel-git gnome-desktop lomiri-app-launch-git lomiri-ui-toolkit-git libqtdbustest-git libqtdbusmock-git indicator-network-git libusermetrics-git liblightdm-qt5 lomiri-settings-components-git lomiri-schemas deviceinfo-git qtmir-git telephony-service-git lomiri-notifications-git lomiri-thumbnailer-git hfd-service-git lomiri-download-manager-git)
@@ -42,7 +42,7 @@ build() {
   cd ${_pkgname}
   mkdir -p build
   cd build
-  cmake -DCMAKE_INSTALL_PREFIX:PATH=/usr -DCMAKE_INSTALL_LIBDIR="lib/" -DNO_TESTS=true ..
+  cmake -DCMAKE_POLICY_VERSION_MINIMUM=3.5 -DCMAKE_INSTALL_PREFIX:PATH=/usr -DCMAKE_INSTALL_LIBDIR="lib/" -DNO_TESTS=true ..
   make
 }
 
