--- a/lomiri-ui-toolkit-git/PKGBUILD
+++ b/lomiri-ui-toolkit-git/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgname=lomiri-ui-toolkit-git
 _pkgname=lomiri-ui-toolkit
-pkgver=r18774.1.3.5110.r69.g9eb9f7d36
+pkgver=r18776.1.3.5110.r71.gb24084320
 pkgrel=0
 pkgdesc='This project consists of a set of QML components to ease the creation of beautiful applications in QML for Lomiri.'
 url='https://gitlab.com/ubports/development/core/lomiri-ui-toolkit'
