--- a/qtmir-git/PKGBUILD
+++ b/qtmir-git/PKGBUILD
@@ -3,8 +3,8 @@
 pkgbase=qtmir-git
 pkgname=(qtmir-git)
 _pkgname=qtmir
-pkgver=r2827.0.7.2.r33.g218fc23f
-pkgrel=0
+pkgver=r2920.0.7.2.r126.gca9e9a26
+pkgrel=1
 url='https://gitlab.com/ubports/development/core/qtmir'
 arch=(x86_64 i686 armv7h aarch64)
 license=(LGPL)
@@ -49,6 +49,7 @@ build() {
   mkdir -p ${BUILD_DIR}
   cd ${BUILD_DIR}
   cmake -DCMAKE_POLICY_VERSION_MINIMUM=3.5 \
+    -DWITH_MIR2=ON \
     -DCMAKE_INSTALL_PREFIX:PATH=/usr \
     -DNO_TESTS=1 \
     -DCMAKE_INSTALL_LIBDIR="lib/" \
