--- a/qtmir-git/PKGBUILD
+++ b/qtmir-git/PKGBUILD
@@ -20,8 +20,10 @@ source=('git+https://gitlab.com/ubports/development/core/qtmir.git#branch=person
         '0022_modules-MirSurface-try-to-let-Mir-forceClose-dead-su.patch'
         '2002_no-requires-provides-check.patch'
         '2003_disable-benchmarks.patch'
+        '3001_link-freetype-harfbuzz.patch'
 )
 sha256sums=('SKIP'
+            'SKIP'
             'SKIP'
             'SKIP'
             'SKIP'
@@ -37,6 +39,8 @@ BUILD_DIR=build
 
 prepare() {
   cd ${_pkgname}
+  # apply 3001_link-freetype-harfbuzz.patch
+  patch -p1 < ../3001_link-freetype-harfbuzz.patch
 }
 
 pkgver() {
@@ -61,10 +65,10 @@ build() {
   make
 }
 
-check() {
-  cd ${_pkgname}/${BUILD_DIR}
-  make ARGS+="--output-on-failure" test
-}
+# check() {
+#   cd ${_pkgname}/${BUILD_DIR}
+#   make ARGS+="--output-on-failure" test
+# }
 
 package_qtmir-git() {
   pkgdesc='Qt platform abstraction (QPA) plugin for a Mir server'
