--- a/unity8-git/PKGBUILD
+++ b/unity8-git/PKGBUILD
@@ -3,28 +3,124 @@
 # Maintainer: Furkan Kardame <furkan@fkardame.com>
 
 pkgbase=lomiri
-pkgname=(lomiri-git)
+pkgname=(lomiri)
 _pkgname=lomiri
-pkgver=r18754.e7bc87f88
-pkgrel=1
+pkgver=0.5.0
+pkgrel=0
 url='https://gitlab.com/ubports/development/core/lomiri'
 arch=(x86_64 i686 armv7h aarch64)
 license=(LGPL3)
 depends=(lcov gcovr geonames-git lomiri-api-git qmenumodel-git gnome-desktop lomiri-app-launch-git lomiri-ui-toolkit-git libqtdbustest-git libqtdbusmock-git indicator-network-git libusermetrics-git liblightdm-qt5 lomiri-settings-components-git lomiri-schemas deviceinfo-git qtmir-git telephony-service-git lomiri-notifications-git lomiri-thumbnailer-git hfd-service-git lomiri-download-manager-git)
 makedepends=(git cmake cmake-extras doxygen)
 checkdepends=(xorg-server-xvfb)
-source=('git+https://gitlab.com/ubports/development/core/lomiri.git#branch=main'
-        'NoDpkgParse.patch'
-        'manjarofy-lomiri.patch'
-        'skip-language-wizard-page.patch'
-        '0001-Use-deviceinfo-for-platform.patch'
-        '0001-Move-indicator-dbus-calls-to-org.ayatana.patch')
+source=('https://gitlab.com/ubports/development/core/lomiri/-/archive/0.5.0/lomiri-0.5.0.tar.gz?ref_type=tags'
+        '0022_enable-stopping-the-flick-with-just-a-press.patch'
+        '0024_only-load-prompty-if-cover-page-is-not-shown.patch'
+        '0030_lomiri-upstream-home-logo.patch'
+        '0031_faster-session-exit.patch'
+        '0032_dont-ask-for-SIM-PIN-in-greeter.patch'
+        '0033_fix-multi-process-app-having-phantom-window.patch'
+        '0034_spawn-apps-in-fullscreen-when-in-phone+tablet-mode.patch'
+        '0035_DisplayConfigurationStorage-drop-use-of-edid-descriptors.patch'
+        '0041_Refreshes-app-icons-on-icon-cache-changes.patch'
+        '0042_Respects-NoDisplay-true-in-desktop-files.patch'
+        '0043_Expands-icon-monitoring.patch'
+        '0044_Defers-launcher-refresh-during-install.patch'
+        '0045_Adds-a-mock-icon-cache-watcher-for-testing.patch'
+        '0046_Adds-test-for-icon-cache-change.patch'
+        '1001a_use-com-lomiri-Shell-pictureUri.patch'
+        '1001b_qml-Shell.qml-Dynamically-switch-gsettings-context-f.patch'
+        '1003_fix-library-permission.patch'
+        '1005_cursor-always-follow-cursor-position-from-mir.patch'
+        '1006_avoid-embedding-a-randomized-HOME-value.patch'
+        '1007_fix-scrolling-issues.patch'
+        '1010a_use-ayatana-greeter-badges.patch'
+        '1010b_use-ayatana-greeter-badges.patch'
+        '1013_fix-convergence-on-high-resolution-tablets.patch'
+        '1015_greeter-textprompt-ESC-will-disable-OSK-again.patch'
+        '1016_rotate-when-orientation-is-locked.patch'
+        '1017_dont-load-indicators-for-unregistered-services.patch'
+        '1018a_Add-shortcut-to-toggle-side-stage.patch'
+        '1019_WorkspacePreview-reduce-lag-when-app-enters-exit-ful.patch'
+        '1021_qml-Fix-WorkspacePreview-positioning.patch'
+        '1022_qml-Enable-live-blur-when-in-windowed-mode-for-more-.patch'
+        '1023_qml-Remove-smooth-property-assignment-to-stay-unifor.patch'
+        '1024_qml-Resize-Window-Decoration-with-surfaces.patch'
+        '1025_qml-Rework-application-window-surface-clipping.patch'
+        '1026_qml-Disallow-resizing-unresizeable-windows-follow-ma.patch'
+        '1027_qml-Pass-on-the-Stage-down-to-the-SurfaceContainer-t.patch'
+        '1028_qml-Center-the-WorkspacePreview-in-its-parent-horizo.patch'
+        '2001_disable-broken-test-mir2.patch'
+        '2005_dont-reset-alwaysShowOsk-to-system-defaults-on-login.patch'
+        '2006_use-Noto-Sans-Font.patch'
+        '2007_fix-testWindowStateStorage.patch'
+        '2008_skip-failing-tests.patch'
+        '2009_disable-qtmir-tests.patch'
+        '2010_use-desktop-qtmir.patch'
+        '2011_skip-language-keymap-tests.patch'
+        '2012_no-app-suspension-on-Debian+Ubuntu-proper.patch'
+        '2013_CXX-standard-20.patch'
+        '2014_lomiri-greeter-wrapper-on-wayland.patch'
+        '2015_lomiri-greeter-use-wayland.patch'
+        
+)
 sha256sums=('SKIP'
-            '22795aae2c98ae95c58bd7263d7e3619fa5b454cad1267827f16e56074cd17bb'
-            '70edd462639b6c6b428e39b947f20f344b49057d3e3d3a6b0636fee87fd7bce8'
-            'f28deb38ccc6556a749d6d4f0bccd7e6a0166c2880d3fcb78898343c274f92f3'
-            '273f7b342642ed5240cd138911395ee72f45d3cb1509e3f6b78b3f5ec9d5c233'
-            '905c7e4798a8cc41649d532ee097a63f98c85507ec29059f353a082ad0b0f0a0')
+            'SKIP'
+            'SKIP'
+            'SKIP'
+            'SKIP'
+            'SKIP'
+            'SKIP'
+            'SKIP'
+            'SKIP'
+            'SKIP'
+            'SKIP'
+            'SKIP'
+            'SKIP'
+            'SKIP'
+            'SKIP'
+            'SKIP'
+            'SKIP'
+            'SKIP'
+            'SKIP'
+            'SKIP'
+            'SKIP'
+            'SKIP'
+            'SKIP'
+            'SKIP'
+            'SKIP'
+            'SKIP'
+            'SKIP'
+            'SKIP'
+            'SKIP'
+            'SKIP'
+            'SKIP'
+            'SKIP'
+            'SKIP'
+            'SKIP'
+            'SKIP'
+            'SKIP'
+            'SKIP'
+            'SKIP'
+            'SKIP'
+            'SKIP'
+            'SKIP'
+            'SKIP'
+            'SKIP'
+            'SKIP'
+            'SKIP'
+            'SKIP'
+            'SKIP'
+            'SKIP'
+            'SKIP'
+            'SKIP'
+            'SKIP'
+            'SKIP'
+            'SKIP'
+            'SKIP'
+            'SKIP'
+            'SKIP'
+)
 
 BUILDENV+=('!check') # https://paste.ubuntu.com/p/2d33RJX4W8/
 
@@ -51,7 +147,7 @@ build() {
 #  make ARGS+="--output-on-failure" test
 #}
 
-package_lomiri-git() {
+package() {
   pkgdesc='Lomiri shell'
   conflicts=(lomiri)
   provides=(lomiri)
