--- a/system-settings-git/PKGBUILD
+++ b/system-settings-git/PKGBUILD
@@ -1,9 +1,9 @@
 # Maintainer: Ivan Semkin (ivan at semkin dot ru)
 
-pkgname=system-settings-git
+pkgname=lomiri-system-settings
 _pkgname=system-settings
-pkgver=r7783.bf1c2d30
-pkgrel=1
+pkgver=1.3.1
+pkgrel=0
 pkgdesc='System Settings application for Unity8'
 url='https://github.com/ubports/system-settings'
 arch=(x86_64 i686 armv7h aarch64)
@@ -13,7 +13,7 @@ provides=(system-settings)
 depends=(trust-store-git click-git gnome-desktop lomiri-app-launch-git geonames-git libqtdbusmock-git lomiri-ui-toolkit-git gsettings-qt accountsservice-ubuntu upower suru-icon-theme-git qmenumodel-git libqofono-qt5 content-hub-git)
 makedepends=(git cmake intltool)
 checkdepends=(xorg-server-xvfb)
-source=('git+https://github.com/ubports/system-settings.git#branch=xenial'
+source=('https://gitlab.com/ubports/development/core/lomiri-system-settings/-/archive/1.3.1/lomiri-system-settings-1.3.1.tar.gz'
         '0001-Use-ayatana-for-power-sound-and-datetime.patch'
         'no-deb-system-updates.patch')
 sha256sums=('SKIP'
@@ -22,10 +22,10 @@ sha256sums=('SKIP'
 
 BUILDENV+=('!check') # Some tests fail
 
-pkgver() {
-  cd ${_pkgname}
-  echo "r$(git rev-list --count HEAD).$(git describe --always)"
-}
+# pkgver() {
+#   cd ${_pkgname}
+#   echo "r$(git rev-list --count HEAD).$(git describe --always)"
+# }
 
 prepare() {
   cd ${_pkgname}
