--- a/libayatana-common-git/PKGBUILD
+++ b/libayatana-common-git/PKGBUILD
@@ -2,8 +2,8 @@
 
 pkgname="libayatana-common-git"
 _pkgname="libayatana-common"
-pkgver=git_r1
-pkgrel="1"
+pkgver=git_r236
+pkgrel=1
 pkgdesc="Ayatana shared library for common functions"
 arch=("i686" "x86_64" "aarch64")
 url="https://github.com/AyatanaIndicators/libayatana-common"
