--- a/hfd-service/PKGBUILD
+++ b/hfd-service/PKGBUILD
@@ -9,7 +9,7 @@ arch=("i686" "x86_64" "aarch64")
 url="https://github.com/ubports/hfd-service"
 license=("GPL3")
 depends=(qt5-base qt5-declarative qt5-feedback)
-makedepends=("accountsservice-ubuntu" "deviceinfo-git" "cmake" "cmake-extras" "git")
+makedepends=("accountsservice" "deviceinfo-git" "cmake" "cmake-extras" "git")
 source=("https://gitlab.com/ubports/development/core/hfd-service/-/archive/0.2.3/hfd-service-0.2.3.tar.gz")
 md5sums=("SKIP")
 options=("!emptydirs")
