--- a/lomiri-system-settings/PKGBUILD
+++ b/lomiri-system-settings/PKGBUILD
@@ -11,7 +11,7 @@ license=(GPL3)
 conflicts=(system-settings)
 provides=(system-settings)
 # No content-hub-git needed for mobile
-depends=(click-git gnome-desktop lomiri-app-launch-git geonames-git libqtdbusmock-git lomiri-ui-toolkit-git gsettings-qt accountsservice-ubuntu upower suru-icon-theme-git qmenumodel-git libqofono-qt5)
+depends=(click-git gnome-desktop lomiri-app-launch-git geonames-git libqtdbusmock-git lomiri-ui-toolkit-git gsettings-qt accountsservice upower suru-icon-theme-git qmenumodel-git libqofono-qt5)
 makedepends=(git cmake intltool)
 checkdepends=(xorg-server-xvfb)
 source=('https://gitlab.com/ubports/development/core/lomiri-system-settings/-/archive/1.3.2/lomiri-system-settings-1.3.2.tar.gz'
